--- a/web/index.html
+++ b/web/index.html
@@ -23,11 +23,11 @@
     <div class="bad-position position">
       <h2>Your Position</h2>
       <img src="assets/images/bad.png" alt="">
-      <div class="tt" style="background-color: {{reads.top_back > 100 ? 'green' : 'green'}};"></div>
-      <div class="tm" style="background-color: {{reads.middle_back > 100 ? 'green' : 'green'}};"></div>
-      <div class="tb" style="background-color: {{reads.bottom_back > 100 ? 'green' : 'green'}};"></div>
-      <div class="bl" style="background-color: {{reads.left_seat > 100 ? 'green' : 'green'}};"></div>
-      <div class="br" style="background-color: {{reads.right_seat > 100 ? 'green' : 'green'}};"></div>
+      <div class="tt"></div>
+      <div class="tm"></div>
+      <div class="tb"></div>
+      <div class="bl"></div>
+      <div class="br"></div>
     </div>
   </div>
   <script src="https://js.pusher.com/3.0/pusher.min.js"></script>
