Finished the ui

--- a/web/index.html
+++ b/web/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Hack A Chair</h1>
+    <img src="assets/images/hack-a-chair-logo_white.png" alt="">
   </header>
   <div class="wrapper">
     <div class="good-position position">
       <h2>Good Position</h2>
-      <img src="assets/images/good.png" alt="">
+      <img src="assets/images/good.svg" alt="">
       <div class="tt" style="background-color: green;"></div>
       <div class="tm" style="background-color: green;"></div>
       <div class="tb" style="background-color: green;"></div>
@@ -22,7 +22,7 @@
     </div>
     <div class="bad-position position">
       <h2>Your Position</h2>
-      <img src="assets/images/bad.png" alt="">
+      <img src="assets/images/bad.svg" alt="">
       <div class="tt"></div>
       <div class="tm"></div>
       <div class="tb"></div>
