Ui - wrong angle implementation

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="bad-position position">
       <h2>Your Position</h2>
-      <img src="assets/images/bad.svg" alt="">
+      <img src="assets/images/empty.svg" alt="">
       <div class="tt"></div>
       <div class="tm"></div>
       <div class="tb"></div>
