--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     <div class="good-position position">
       <h2>Good Position</h2>
       <img src="assets/images/good.svg" alt="">
-      <div class="tt" style="background-color: green;"></div>
+      <div class="tt"  style="background-color: green;"></div>
       <div class="tm" style="background-color: green;"></div>
       <div class="tb" style="background-color: green;"></div>
       <div class="bl" style="background-color: green;"></div>
@@ -23,11 +23,11 @@
     <div class="bad-position position">
       <h2>Your Position</h2>
       <img src="assets/images/empty.svg" alt="">
-      <div class="tt"></div>
-      <div class="tm"></div>
-      <div class="tb"></div>
-      <div class="bl"></div>
-      <div class="br"></div>
+      <div class="tt" style="background-color: {{getState(reads.top_back)}};"></div>
+      <div class="tm" style="background-color: {{getState(reads.middle_back)}};"></div>
+      <div class="tb" style="background-color: {{getState(reads.bottom_back)}};"></div>
+      <div class="bl" style="background-color: {{getState(reads.left_seat)}};"></div>
+      <div class="br" style="background-color: {{getState(reads.right_seat)}};"></div>
     </div>
   </div>
   <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
